# snapshotter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: collector.rs  config.rs  error.rs  lib.rs  types.rs  utils.rs  writer.rs
tests/: integration.rs
